# comet

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  chap28_methods.diff  chap29_superclasses.diff  chap30_optimization.diff  grammar.md  sample.cmt  test.cmt
.github/workflows/: ccpp.yml  sharpcomet.yml
clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  native.c  native.h  object.c  object.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h
clox/stdlib/: README.md  file.c
comet/: CMakeLists.txt  comet.h  coverage.cpp  main.c
comet/private/: comet_private.h
compiler/: CMakeLists.txt  ast.c  ast.h  expression.c  expression.h
docs/: CNAME  _config.yml  index.md
docs/_layouts/: default.html
docs/stdlib/: argument_exception.md  boolean.md  csv.md  datetime.md  directory.md  duration.md  enum.md  env.md  exception.md  file.md  function.md  hash.md  image.md  index.md  iterable.md  json.md  list.md  module.md  nil.md  number.md  object.md  set.md  socket.md  string.md  string_builder.md  thread.md  thread_synchronisation.md  unittest.md
docs/syntax/: index.md
eral/: CMakeLists.txt  eral_config.h  error.c  error.h  fileBuffer.c  fileBuffer.h  fileOpener.c  fileOpener.h  hash_table.c  hash_table.h  liberal.h  list.c  list.h  stack.c  stack.h  stringBuffer.c  stringBuffer.h  util.h
eral/test/: CMakeLists.txt  test_FileBuffer.c  test_HashTable.c  test_List.c  test_Stack.c  test_StringBuffer.c
lexer/: CMakeLists.txt  error.c  lexer_error.h  tokenList.c  tokenList.h  tokeniser.c  tokens.c  tokens.h
rusty-comet/: Cargo.toml
rusty-comet/src/: lib.rs  main.rs
rusty-comet/src/lexer/: keywords.rs  mod.rs  scanner.rs  token.rs
rusty-comet/tests/lexer/: mod.rs
sharp-comet/: sharp-comet.sln
sharp-comet/comet/: Program.cs  comet.csproj
sharp-comet/compiler/: ClassCompiler.cs  Compiler.cs  FunctionCompiler.cs  LocalVariable.cs  LoopCompiler.cs  ParseRule.cs  Parser.cs  Precedence.cs  compiler.csproj  declarations.cs  expressions.cs  statements.cs
sharp-comet/lexer/: CharIterator.cs  Keywords.cs  Scanner.cs  Source.cs  SourceFile.cs  Token.cs  TokenType.cs  lexer.csproj
sharp-comet/stdlib/: CometBoolean.cs  CometFunction.cs  CometObject.cs  CometString.cs  Nil.cs
sharp-comet/tests/compiler.tests/: DeclarationsTests.cs  UnitTest1.cs  compiler.tests.csproj
sharp-comet/tests/lexer.tests/: ScannerTests.cs  lexer.tests.csproj
sharp-comet/vm/: CallFrame.cs  Closure.cs  InterpretResults.cs  Interpreter.cs  UpValue.cs  VirtualMachine.cs  vm.csproj
sharp-comet/vmlib/: Chunk.cs  CometFunction.cs  CometModule.cs  CometObject.cs  CompilationException.cs  Strings.cs  operations.cs
stdlib/: CMakeLists.txt  _init.c  boolean.c  colour.cpp  cometlib.h  datetime.c  datetime.cpp  datetime_unix.cpp  datetime_win.cpp  directory.cpp  duration.cpp  enum.c  enum.cpp  env.c  env.cpp  exception.c  file.c  file_common.c  file_common.cpp  file_unix.c  file_unix.cpp  file_win.c  file_win.cpp  function.c  functions.c  hash.c  hash.cpp  image.c  iterable.c  list.c  list.cpp  module.c  nil.c  number.c  object.c  process.cpp  set.c  set.cpp  socket.c  string.c  (+6 more)
stdlib/comet/: CMakeLists.txt  coverage.cmt  csv.cmt  json.cmt  unittest.cmt
stdlib/private/: colour.h  comet_stdlib.h  comet_string.h  datetime.hpp  directory.hpp  file_common.h  list.h  object.h  string_builder.h  thread_sync_common.h
stdlib/test/: CMakeLists.txt  main.c  test_list.c  tests.h
test_scripts/: argument_exception_test.cmt  argument_nil_exception_test.cmt  attribute_test.cmt  boolean.cmt  class_inherits_constructor.cmt  class_inherits_imported_class.cmt  class_inherits_object.cmt  class_operator_overload.cmt  class_with_field.cmt  colour.cmt  complex_exception_with_finally.cmt  datetime_test.cmt  default_params.cmt  directory_test.cmt  duration_test.cmt  enum_declaration.cmt  env_test.cmt  exception_handler.cmt  file_test.cmt  for_loop_test.cmt  foreach_loops.cmt  hash_test.cmt  image.cmt  import_test.cmt  instanceof.cmt  is.cmt  json_test.cmt  lambda.cmt  list_test.cmt  main_test.cmt  native_field_accessor.cmt  numbers_test.cmt  object_test.cmt  process_test.cmt  rest_params_test.cmt  set_test.cmt  simple_exception.cmt  simple_list.cmt  socket_threads.cmt  splat_test.cmt  (+6 more)
test_scripts/import_test/: main.cmt  secondary.cmt
vmlib/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  import.c  import.cpp  import.h  mem.c  mem.h  messages.c  messages.h  native.c  native.h  object.c  object.h  object_defs.h  objects.c  objects.h  scanner.c  scanner.h  table.c  table.h  value.c  value.h  vm.c  vm.h  vm_globals.c
vmlib/compiler/: CMakeLists.txt
vmlib/compiler/inc/: compiler.h
vmlib/compiler/src/: compiler.c  compiler_defs.h  constants.c  constants.h  debug.c  declarations.c  declarations.h  emitter.c  emitter.h  expressions.c  expressions.h  import.c  import.h  source_files.c  sources.cmake  statements.c  statements.h  variables.c  variables.h
vmlib/compiler/test/: CMakeLists.txt  main.c  test_pratt_parser.c  tests.h
vmlib/lexer/: CMakeLists.txt
vmlib/lexer/inc/: scanner.h
vmlib/lexer/src/: scanner.c  sources.cmake
vmlib/lexer/test/: CMakeLists.txt  main.c  test_scanner.c  tests.h
